samples/_failures_safe/1761089064_db0d5c_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_613a9404.c: In function ‘dijkstra_shortest_path’:
./samples/SAFE/__tmp_613a9404.c:153:5: error: expected expression at end of input
  153 |     printf("Shortest distances from node %d:\n",
      |     ^~~~~~
./samples/SAFE/__tmp_613a9404.c:153:5: error: expected declaration or statement at end of input
